# bit7z-python

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  setup.py  setup_bfcps.py  setup_bfext.py
.github/workflows/: ci.yml
bit7z_python/: __init__.py
evp/: PyBit7z.hpp
include/: CMakeLists.txt  pyos.hpp
src/: API.hpp  Bit7zLibrary_EVP.cpp  BitFileCompressor_EVP.cpp  BitFileExtractor_EVP.cpp  BitFormat_EVP.cpp  BitFormat_EVP.hpp  Enums_EVP.cpp  core.cpp  format_cvt.hpp  setup_bfcps.py  setup_bfext.py
test/: GTK4.7z  test.py
test/wx_demos/: wxpoem.idx  wxpoem.txt
test/wx_demos/bitmaps/: alignleft.xpm  alignright.xpm  bold.xpm  center.xpm  centre.xpm  copy.xpm  cut.xpm  east.xpm  font.xpm  idea.xpm  indentless.xpm  indentmore.xpm  info.xpm  italic.xpm  life.xpm  north.xpm  open.xpm  paste.xpm  play.xpm  redo.xpm  reset.xpm  save.xpm  smiley.xpm  south.xpm  stop.xpm  underline.xpm  undo.xpm  west.xpm  zebra.xpm  zoomin.xpm  zoomout.xpm
test/wx_demos/icons/: activityindicator.xpm  bmpbtn.xpm  bmpcombobox.xpm  button.xpm  checkbox.xpm  choice.xpm  choicebk.xpm  clrpicker.xpm  combobox.xpm  datepick.xpm  dirctrl.xpm  dirpicker.xpm  filepicker.xpm  fontpicker.xpm  gauge.xpm  header.xpm  hyperlnk.xpm  listbook.xpm  listbox.xpm  native.xpm  notebook.xpm  odcombobox.xpm  radiobox.xpm  scrolbar.xpm  slider.xpm  spinbtn.xpm  statbmp.xpm  statbox.xpm  stattext.xpm  text.xpm  timepick.xpm  toggle.xpm
